# Fraud_Detection_Production_System

./: .gitignore  PRODUCTION_READY.md  README.md  pyproject.toml  run.py  run_inference.py  run_test.py  show_results.py
core/: evaluation.py  preprocessing.py  validation.py
pipelines/: inference_pipeline.py  training_pipeline.py
steps/: drift_detection.py  evaluate_model.py  load_data.py  model_deployer.py  preprocess_data.py  train_model.py
tests/: test_core.py
